[gd_scene load_steps=17 format=3 uid="uid://bsi0lrqw3f42f"]

[ext_resource type="Texture2D" uid="uid://pmdnrxa2gj4k" path="res://art/ninja/run4.png" id="1_3qlkg"]
[ext_resource type="Script" path="res://ninja.gd" id="1_h7if2"]
[ext_resource type="Texture2D" uid="uid://cias03en6lf4p" path="res://art/ninja/jump.png" id="2_0iilq"]
[ext_resource type="Texture2D" uid="uid://ca4mxw02ldj6b" path="res://art/ninja/ledgegrab.png" id="2_5r2r8"]
[ext_resource type="Texture2D" uid="uid://b3e0mp1yeni7b" path="res://art/ninja/run1.png" id="2_026nw"]
[ext_resource type="Texture2D" uid="uid://bw8w86lkjxws7" path="res://art/ninja/run2.png" id="3_2h22m"]
[ext_resource type="Texture2D" uid="uid://dob27g8nfsnac" path="res://art/ninja/run3.png" id="4_8u02g"]
[ext_resource type="Texture2D" uid="uid://b1wfq66vsekfd" path="res://art/ninja/run5.png" id="5_23mm3"]
[ext_resource type="Texture2D" uid="uid://2avc7uq6omcc" path="res://art/ninja/wallslide.png" id="8_3u8bu"]
[ext_resource type="AudioStream" uid="uid://cji4c31cp015f" path="res://sounds/jump.wav" id="10_dupb2"]
[ext_resource type="AudioStream" uid="uid://bk66wk6lee56k" path="res://sounds/player_hurt.wav" id="11_ps3ap"]
[ext_resource type="AudioStream" uid="uid://b3jwlmju6qwfs" path="res://sounds/lose.wav" id="12_pmafd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jhc0y"]
atlas = ExtResource("1_3qlkg")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_17513"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhc0y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5r2r8")
}],
"loop": true,
"name": &"grab",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0iilq")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_026nw")
}, {
"duration": 1.0,
"texture": ExtResource("3_2h22m")
}, {
"duration": 1.0,
"texture": ExtResource("5_23mm3")
}, {
"duration": 1.0,
"texture": ExtResource("4_8u02g")
}, {
"duration": 1.0,
"texture": ExtResource("1_3qlkg")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_3u8bu")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7t4ge"]
radius = 4.5
height = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_buv8g"]
radius = 5.09902

[node name="Ninja" type="CharacterBody2D" groups=["player"]]
z_index = 12
script = ExtResource("1_h7if2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_17513")
animation = &"slide"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 2.5)
shape = SubResource("CapsuleShape2D_7t4ge")

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_buv8g")

[node name="StarTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="Sounds" type="Node" parent="."]

[node name="Jump" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("10_dupb2")

[node name="PlayerHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ps3ap")

[node name="PlayerLose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_pmafd")

[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="StarTimer" to="." method="_on_star_timer_timeout"]
